--- a/app/src/main/res/navigation/mobile_navigation_motorista.xml
+++ b/app/src/main/res/navigation/mobile_navigation_motorista.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_suporte"
-        android:name="com.gutotech.tcclogistica.view.motorista.ui.suporte.SuporteFragment"
+        android:name="com.gutotech.tcclogistica.view.suporte.SupportFragment"
         android:label="@string/suporte"
         tools:layout="@layout/fragment_suporte" />
 </navigation>
