--- a/app/src/main/res/layout/expandable_login_funcionario_group.xml
+++ b/app/src/main/res/layout/expandable_login_funcionario_group.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textColor="@android:color/black" />
+        android:layout_marginLeft="32dp"
+        android:text="@string/login"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 </LinearLayout>
