--- a/app/src/main/res/layout/fragment_adm_funcionario_novo.xml
+++ b/app/src/main/res/layout/fragment_adm_funcionario_novo.xml
@@ -113,6 +113,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginRight="16dp"
                     android:background="@drawable/background_edit_text"
+                    android:digits="0123456789"
                     android:ems="10"
                     android:inputType="date" />
 
@@ -322,7 +323,6 @@
                     android:inputType="textPersonName" />
 
                 <TextView
-                    android:id="@+id/textViewAno"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -346,7 +346,6 @@
                     android:inputType="numberSigned" />
 
                 <TextView
-                    android:id="@+id/placaTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
