--- a/app/src/main/res/navigation/mobile_navigation_adm.xml
+++ b/app/src/main/res/navigation/mobile_navigation_adm.xml
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/nav_suporte"
-        android:name="com.gutotech.tcclogistica.view.adm.ui.suporte.SendFragment"
+        android:name="com.gutotech.tcclogistica.view.suporte.SupportFragment"
         android:label="@string/suporte"
         tools:layout="@layout/fragment_suporte" />
 </navigation>
