--- a/app/src/main/res/layout/fragment_adm_estoque.xml
+++ b/app/src/main/res/layout/fragment_adm_estoque.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.adm.ui.estoque.AdmEstoqueFragment">
+    tools:context=".view.adm.ui.notas.AdmEstoqueFragment">
 
     <SearchView
         android:id="@+id/searchView"
