--- a/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
+++ b/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.roteirista.ui.estoque.RoteiristaNotasCadastradasFragment">
+    tools:context=".view.roteirista.ui.notas.RoteiristaNotasCadastradasFragment">
 
     <SearchView
         android:id="@+id/searchView"
