--- a/app/src/main/res/menu/activity_motorista_main_drawer.xml
+++ b/app/src/main/res/menu/activity_motorista_main_drawer.xml
@@ -10,13 +10,22 @@
             android:title="@string/entregas" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_suporte"
-                android:icon="@drawable/ic_help_24dp"
-                android:title="@string/suporte" />
-        </menu>
-    </item>
+    <group
+        android:id="@+id/menu2"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_meus_dados"
+            android:icon="@drawable/ic_account_box_24dp"
+            android:title="@string/meus_dados" />
+    </group>
+
+    <group
+        android:id="@+id/menu3"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_suporte"
+            android:icon="@drawable/ic_help_24dp"
+            android:title="@string/ajuda_e_feedback" />
+    </group>
 
 </menu>
